{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 37,
  "lineage": "50445349-c4cf-6779-faff-25a833545071",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335199760:internet-gateway/igw-0dc86ff54ed20d7ee",
            "id": "igw-0dc86ff54ed20d7ee",
            "owner_id": "730335199760",
            "tags": {
              "Name": "internet-gateway-dev"
            },
            "tags_all": {
              "Name": "internet-gateway-dev"
            },
            "vpc_id": "vpc-03d0cf96d9c79a2c8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:730335199760:loadbalancer/app/elb-dev/c3962227f21aa8c1",
            "arn_suffix": "app/elb-dev/c3962227f21aa8c1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-dev-1301291377.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:730335199760:loadbalancer/app/elb-dev/c3962227f21aa8c1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "elb-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-023108d8ea0c69610"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0083e6d7c7c413239"
              },
              {
                "subnet_id": "subnet-01b3f34bdcfd433f9"
              }
            ],
            "subnets": [
              "subnet-0083e6d7c7c413239",
              "subnet-01b3f34bdcfd433f9"
            ],
            "tags": {
              "Name": "elb-dev"
            },
            "tags_all": {
              "Name": "elb-dev"
            },
            "vpc_id": "vpc-03d0cf96d9c79a2c8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_subnet.public_subnet_1a",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:730335199760:listener/app/elb-dev/c3962227f21aa8c1/a8375960e7b13c25",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:730335199760:targetgroup/EC2TargetGroup/d2838527d3ecd316",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:730335199760:listener/app/elb-dev/c3962227f21aa8c1/a8375960e7b13c25",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:730335199760:loadbalancer/app/elb-dev/c3962227f21aa8c1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.elb",
            "aws_lb_target_group.ec2",
            "aws_security_group.elb",
            "aws_subnet.public_subnet_1a",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:730335199760:targetgroup/EC2TargetGroup/d2838527d3ecd316",
            "arn_suffix": "targetgroup/EC2TargetGroup/d2838527d3ecd316",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:730335199760:targetgroup/EC2TargetGroup/d2838527d3ecd316",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:730335199760:loadbalancer/app/elb-dev/c3962227f21aa8c1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "EC2TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03d0cf96d9c79a2c8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335199760:route-table/rtb-077fe2e8fd380d71c",
            "id": "rtb-077fe2e8fd380d71c",
            "owner_id": "730335199760",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc86ff54ed20d7ee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-dev"
            },
            "tags_all": {
              "Name": "public-route-table-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d0cf96d9c79a2c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335199760:security-group/sg-05d6952d8145535d9",
            "description": "EC2 Security Group",
            "egress": [],
            "id": "sg-05d6952d8145535d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023108d8ea0c69610"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-security-group-dev20240515122503788500000004",
            "name_prefix": "ec2-security-group-dev",
            "owner_id": "730335199760",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-security-group-dev"
            },
            "tags_all": {
              "Name": "ec2-security-group-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d0cf96d9c79a2c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335199760:security-group/sg-023108d8ea0c69610",
            "description": "ELB Security Group",
            "egress": [],
            "id": "sg-023108d8ea0c69610",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-security-group-dev20240515122459651000000002",
            "name_prefix": "elb-security-group-dev",
            "owner_id": "730335199760",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb-security-group-dev"
            },
            "tags_all": {
              "Name": "elb-security-group-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d0cf96d9c79a2c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335199760:subnet/subnet-0fa73735699e7ad53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa73735699e7ad53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335199760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1-dev"
            },
            "tags_all": {
              "Name": "private-subnet-1-dev"
            },
            "vpc_id": "vpc-03d0cf96d9c79a2c8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335199760:subnet/subnet-01b3f34bdcfd433f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b3f34bdcfd433f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335199760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1-dev"
            },
            "tags_all": {
              "Name": "public-subnet-1-dev"
            },
            "vpc_id": "vpc-03d0cf96d9c79a2c8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335199760:vpc/vpc-03d0cf96d9c79a2c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02f479742f24ed875",
            "default_route_table_id": "rtb-07054dd70d46e6b6b",
            "default_security_group_id": "sg-03017ecf839ee9d4e",
            "dhcp_options_id": "dopt-0e89cdc90f2e8100f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d0cf96d9c79a2c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07054dd70d46e6b6b",
            "owner_id": "730335199760",
            "tags": {
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Name": "vpc-dev"
            }
          }
        }
      ]
    }
  ]
}